Increase size and fix overflow issue

--- a/style.css
+++ b/style.css
@@ -9,19 +9,19 @@ h1 {
 #container {
   border: 5px inset #444;
   margin: 0 auto;
-  width: 300px;
+  width: 460px;
 }
 
 div#keypad {
   margin: 0 auto;
-  width:  300px;  
-  height: 375px;
+  width:  460px;  
+  height: 460px;
 }
 
 .button {
   float: left;
-  height : 75px;
-  width : 75px;
+  height : 92px;
+  width : 115px;
   font-size: 24px;
   background: #383838;
   color: #fff;
@@ -51,10 +51,10 @@ div#keypad {
   color: #fff;
   margin: 0 auto;
   padding-right: 10px;
-  width: 300px;
+  width: 460px;
   box-sizing: border-box;
   text-align: right;
-  line-height: 90px; 
+  line-height: 100px; 
   font-size: 36px;
 }
 
